# insect_dose_sim

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ActionInitialization.h  DetectorConstruction.h  DetectorMessenger.h  EventAction.h  PhysicsList.h  PrimaryGeneratorAction.h  PrimaryGeneratorMessenger.h  RunAction.h  RunMessenger.h  SteppingAction.h  parameters.h
macros/: run_drosophila_mono.mac  run_drosophila_wb.mac  run_leptopilina_mono.mac  run_leptopilina_wb.mac  run_sitophilus_mono.mac  run_sitophilus_wb.mac  vis.mac
meshes/: 100_EtOH.stl  drosophila.stl  leptopilina.stl  sitophilus.stl  tube.stl
spectra/: image_filtered_wb.txt
src/: ActionInitialization.cpp  DetectorConstruction.cpp  DetectorMessenger.cpp  EventAction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  PrimaryGeneratorMessenger.cpp  RunAction.cpp  RunMessenger.cpp  SteppingAction.cpp
